# propositional

./: README.md  propositional.cabal
src/: Main.hs  MonParsComs.hs  PropWffParsing.hs  Tableaux.hs
tests/: tests.hs
