name:                propositional
version:             0.1.0.0
license-file:        LICENSE
author:              JLP
maintainer:          fivehmay@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10


library
 exposed-modules:      MonParsComs
                     , PropWffParsing
                     , Tableaux
 ghc-options:          -Wall -fwarn-tabs
 build-depends:        base >=4.7 && <5
                     , containers
                     , QuickCheck
                     , hspec
 hs-source-dirs:       src
 default-language:     Haskell2010

executable propositional
 hs-source-dirs:       src
 main-is:              Main.hs
 default-language:     Haskell2010
 build-depends:        base >=4.7 && <5
                     , containers
                     , QuickCheck

test-suite tests
 ghc-options:          -Wall -fno-warn-orphans
 type:                 exitcode-stdio-1.0
 main-is:              tests.hs
 hs-source-dirs:       tests
 build-depends:        base
                     , containers
                     , QuickCheck
                     , propositional
                     , hspec
 default-language:     Haskell2010
